@@ -40,6 +40,7 @@ Bugs fixed
 - Bug 2378 - A-MPDU variables are not correctly reset in YansWifiPhy when a PLCP preamble/header failed
 - Bug 2383 - IPv4 header for reassembled packets reports a wrong payload size
 - Bug 2392 - SYN segment advertised window should not be scaled
+- Bug 2396 - move utility functions to WifiPhy
 
 Known issues
 ------------
